@@ -44,6 +44,7 @@ importFrom("R.utils", "capitalize")
 importFrom("R.utils", "capture")
 importFrom("R.utils", "cat") ## Multi-sources: R.utils, base
 importFrom("R.utils", "cmdArgs")
+importFrom("R.utils", "createLink")
 importFrom("R.utils", "displayCode")
 importFrom("R.utils", "downloadFile")
 importFrom("R.utils", "enter")
@@ -67,6 +68,7 @@ importFrom("R.utils", "less")
 importFrom("R.utils", "popState")
 importFrom("R.utils", "printf")
 importFrom("R.utils", "pushState")
+importFrom("R.utils", "removeDirectory")
 importFrom("R.utils", "renameFile")
 importFrom("R.utils", "sourceTo")
 importFrom("R.utils", "tempvar")
